<resources>
    <string name="app_name">Kron</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="lbl_amount">Amount:</string>
    <string name="lbl_ccy">Currency:</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_description">Description:</string>
    <string name="btn_pay">Pay</string>
    <string name="e_invalid_amount">Invalid amount</string>
    <string name="e_invalid_email">Invalid email</string>
    <string name="e_invalid_description">Enter description</string>
    <string name="loading">Loading…</string>
    <string name="sign_with_email">Подтвердить и создать</string>
    <string name="Reg"><u>Регистрация</u></string>
    <string name="Vhod"><u>Войти</u></string>
    <string name="Less"><u>Забыли пароль?</u></string>
    <string name="zayavka">Подать заявку</string>
    <string name="endR">Ваше место назначение</string>
    <string name="startR">Ваше местоположение</string>
    <string name="title_activity_login_partner">Sign in</string>
    <string name="prompt_email">ivanov@gmail.com</string>
    <string name="prompt_password">*************</string>
    <string name="action_sign_in">Войти</string>
    <string name="skoro">СКОРО!</string>
    <string name="in_ypu_reg">В ВАШЕМ РЕГИОНЕ</string>
    <string name="set">НАСТРОЙКИ</string>
    <string name="pravo">Правовые документы</string>
    <string name="lich">Личные данные</string>
    <string name="privacy">Личные данные</string>
    <string name="rejviziti">Платежные реквизиты</string>
    <string name="sharing">Поделиться с друзьями</string>
    <string name="answ">Вопросы и ответы</string>
    <string name="o_nas">О приложении</string>
    <string name="close">Выход</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="icon_description">Логатип КРОН</string>
    <string name="kron_partner">KRON PARTNER </string>
    <string name="kron_client">KRON CLIENT </string>
    <string name="reg_from">Регистрация через</string>
    <string name="first_use">Пользуетесь KRON впервые?</string>
    <string name="namePartner">Имя партнера</string>
    <string name="nameClient">Имя клиента</string>
    <string name="i_agree_part1"><u>"Соглашение на обработку</u></string>
    <string name="i_agree_part2"><u>персональных данных</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Поделиться</string>
    <string name="parth">Партнерское соглашение</string>
    <string name="polz">Пользовательское соглашение</string>
    <string name="politika">Политика Cookie для KRON</string>
    <string name="comp">О компании</string>
    <string name="license">Лицензия</string>
    <string name="polzo">Правила пользования</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="rate_app">Оцените приложение</string>
    <string name="feedback_app">Обратная связь</string>
</resources>