<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/exit_apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:context="com.mercury.kron.ui.activity.SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbarTop"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/dannye"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_s1"
                    android:drawablePadding="30dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/privacy" />

            <Button
                android:id="@+id/plateska"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dannye"
                android:drawableLeft="@drawable/ic_s2"
                android:drawablePadding="30dp"
                android:paddingLeft="20dp"
                android:gravity="left|center_vertical"
                android:text="@string/rejviziti" />

            </RelativeLayout>

            <Button
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_s3"
                android:drawablePadding="30dp"
                android:paddingLeft="20dp"
                android:gravity="left|center_vertical"
                android:text="@string/sharing" />

            <Button
                android:id="@+id/docks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/zaglushka"
                android:drawablePadding="30dp"
                android:paddingLeft="20dp"
                android:gravity="left|center_vertical"
                android:text="@string/pravo" />

            <Button
                android:id="@+id/quest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_s5"
                android:drawablePadding="30dp"
                android:paddingLeft="20dp"
                android:gravity="left|center_vertical"
                android:text="@string/answ" />

            <Button
                android:id="@+id/about_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_s6"
                android:drawablePadding="30dp"
                android:paddingLeft="20dp"
                android:gravity="left|center_vertical"
                android:text="@string/o_nas" />


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
