<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity_maket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.LoginActivity">
    <TextView
        android:id="@+id/text_switch"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/switch_to_partner"
        android:text="@string/kron_client" />

    <Switch
        android:id="@+id/switch_to_partner"
        style="?attr/switchStyle"
        android:layout_width="45dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
       android:background="@drawable/switch_back_white"
              />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:src="@drawable/kron" />

    <LinearLayout
        android:id="@+id/login_ll_box"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_image"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingBottom="24dp"
        android:paddingTop="24dp">

        <EditText
            android:id="@+id/login_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/logo_enter"
            android:drawableEnd="@drawable/delete_text_mail"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/app_white" />

        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/logo_pass"
            android:drawableEnd="@drawable/delete_text_mail"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/app_white" />

        <Button
            android:id="@+id/login_bt"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_backround"
            android:text="@string/action_sign_in"
            android:textColor="@color/withe_button_color"
            android:textSize="22sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/login_remember_pass"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:text="@string/Less"
            android:textColor="@color/app_white"
            android:textSize="12sp" />
           <TextView
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="16dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/app_white"
               android:text="@string/reg_from"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/login_ll_box"
        android:layout_width="fill_parent"
        android:layout_height="123dp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp">


        <ImageButton
            android:id="@+id/phoneSign"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="38dp"
            android:background="@color/app_main_background"
            app:srcCompat="@drawable/phone_image" />

    <ImageButton
        android:id="@+id/fb_but"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/app_main_background"
        app:srcCompat="@drawable/fb_image" />

    <ImageButton
        android:id="@+id/vk_but"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="42dp"
        android:background="@color/app_main_background"
        app:srcCompat="@drawable/vk_image" />
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            android:text="@string/first_use"
            android:textColor="@color/withe_button_color" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/Reg"
            android:textColor="@color/main_color"
            android:textStyle="bold|italic" />
    </LinearLayout>



</RelativeLayout>