<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_partner_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mercury.kron.ui.activity.tamplets.LoginPartnerActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
           android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toLeftOf="@+id/switch_to_client"
                        android:text="KRON CLIENT" />

                    <Switch
                        android:id="@+id/switch_to_client"
                        style="?attr/switchStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/switchbackgraund"
                        android:checked="true"
                        android:textSize="12dp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/login_welcome_image"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:contentDescription="@string/icon_description"
                    android:layout_gravity="center_horizontal"
                android:layout_marginTop="112dp"
                    android:src="@drawable/kron" />


            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/logo_enter"
                    android:drawableEnd="@drawable/delete_text_mail"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/password_partner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/logo_pass"
                    android:drawableEnd="@drawable/show_text_password"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="268dp"
                android:layout_height="31dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/login_button_backround"
                android:text="@string/action_sign_in"
                android:textColor="@color/withe_button_color"
                android:textSize="22sp"
                android:textStyle="bold" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_gravity="center_horizontal"
    android:text="@string/reg_from"
    android:textSize="17sp"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="123dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="81dp">


                <ImageButton
                    android:id="@+id/phoneSign"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="38dp"
                    android:background="@color/app_partner_background"
                    app:srcCompat="@drawable/phone_image" />

                <ImageButton
                    android:id="@+id/fb_but"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/app_partner_background"
                    app:srcCompat="@drawable/fb_image" />

                <ImageButton
                    android:id="@+id/vk_but"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="42dp"
                    android:background="@color/app_partner_background"
                    app:srcCompat="@drawable/vk_image" />
                <TextView
                    android:id="@+id/textView_use_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="40dp"
                    android:text="Пользуетесь KRON впервые?"
                    android:textColor="@color/withe_button_color" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textView_use_first"

                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="40dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/Reg"
                    android:textColor="@color/main_color"
                    android:textStyle="bold|italic" />
            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>
